@@ -1,6 +1,7 @@
 Revision history for ExtUtils-HasCompiler
 
 {{$NEXT}}
+          Use carp and return instead of croak
 
 0.006     2015-06-27 15:40:31+02:00 Europe/Amsterdam
           Correctly pass linking argument on Win32 and cygwin
